--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "2",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.6",
+    "vue-mask": "^1.0.0",
+    "vue-property-decorator": "^9.0.2",
     "vue-router": "^3.2.0",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.163",
+    "@types/vue-the-mask": "^0.11.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -27,9 +37,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.0.4",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
